--- a/index.html
+++ b/index.html
@@ -1,11 +1,49 @@
+<!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>Not only people need a house</title>
+    <link rel="stylesheet" href="./css/reset.css">
+    <link rel="stylesheet" href="./css/style.css">
 </head>
+
 <body>
-    
+    <header class="header">
+        <div class="wrapper">
+            <div class="header__wrapper">
+                <div class="header__logo">
+                    <a href="/" class="header__logo-link">
+                        <h1 class="header__logo-title">Cozy House</h1>
+                        <h2 class="header__logo-subtitle">Shelter for pets in Boston</h2>
+                    </a>
+                </div>
+                <nav class="header__nav">
+                    <ul class="header__list">
+                        <li class="header__item">
+                            <a href="#" class="header__link">About the shelter</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Our pets</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Help the shelter</a>
+                        </li>
+                        <li class="header__item">
+                            <a href="#" class="header__link">Contacts</a>
+                        </li>
+                    </ul>
+                </nav>
+            </div>
+        </div>
+    </header>
+    <main class="main">
+        <section class="intro">
+
+        </section>
+    </main>
 </body>
+
 </html>
