--- a/index.html
+++ b/index.html
@@ -41,7 +41,16 @@
     </header>
     <main class="main">
         <section class="intro">
-
+            <div class="wrapper">
+                <h1 class="intro__title">
+                    Not only people<br> need a house
+                </h1>
+                <p class="intro__subtitle">
+                    We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
+                </p>
+                <div class="dog-pic"><img src="img/svg/dog-pic.svg"
+                    alt="button"></div>
+            </div>
         </section>
     </main>
 </body>
