--- a/index.html
+++ b/index.html
@@ -1,58 +1,252 @@
 <!DOCTYPE html>
 <html lang="en">
-
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Not only people need a house</title>
-    <link rel="stylesheet" href="./css/reset.css">
-    <link rel="stylesheet" href="./css/style.css">
-</head>
-
-<body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="style.css" />
+    <title>Shelter</title>
+    <link rel="shortcut icon" href="./assets/img/favicon.ico" type="image/x-icon">
+  </head>
+  <body class="body">
+    <!-- HEADER -->
     <header class="header">
-        <div class="wrapper">
-            <div class="header__wrapper">
-                <div class="header__logo">
-                    <a href="/" class="header__logo-link">
-                        <h1 class="header__logo-title">Cozy House</h1>
-                        <h2 class="header__logo-subtitle">Shelter for pets in Boston</h2>
-                    </a>
-                </div>
-                <nav class="header__nav">
-                    <ul class="header__list">
-                        <li class="header__item">
-                            <a href="#" class="header__link">About the shelter</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__link">Our pets</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__link">Help the shelter</a>
-                        </li>
-                        <li class="header__item">
-                            <a href="#" class="header__link">Contacts</a>
-                        </li>
-                    </ul>
-                </nav>
-            </div>
+      <div class="header-container">
+        <div class="header__logo">
+          <h1 class="header__logo_title">Cozy House</h1>
+          <p class="header__logo_subtitle">Shelter for pets in Boston</p>
         </div>
+        <div class="header-menu">
+          <nav class="nav-header">
+            <ul class="nav-header__list">
+              <li class="active"><a href="#about">About the shelter</a></li>
+              <li><a class="our-pets" href="index2.html">Our pets</a></li>
+              <li><a href="#help">Help the shelter</a></li>
+              <li><a href="#contacts">Contacts</a></li>
+            </ul>
+          </nav>
+        </div>
+      </div>
     </header>
-    <main class="main">
-        <section class="intro">
-            <div class="wrapper">
-                <h1 class="intro__title">
-                    Not only people<br> need a house
-                </h1>
-                <p class="intro__subtitle">
-                    We offer to give a chance to a little and nice puppy with an extremely wide and open heart. He or she will love you more than anybody else in the world, you will see!
-                </p>
-                <div class="dog-pic"><img src="img/svg/dog-pic.svg"
-                    alt="button"></div>
-            </div>
-        </section>
-    </main>
-</body>
 
+    <main>
+      <!-- SECTION NOT-ONLY -->
+
+      <section class="hero">
+        <div class="hero-container">
+          <div class="hero-text">
+            <div class="hero-name">
+              <h2>Not only people need a house</h2>
+            </div>
+            <div class="hero-subtitle">
+              <p>
+                We offer to give a chance to a little and nice puppy with an
+                extremely wide and open heart. He or she will love you more than
+                anybody else in the world, you will see!
+              </p>
+            </div>
+            <button>Make a friend</button>
+          </div>
+          <div class="hero-pic">
+            <img src="assets/img/start-screen-puppy.png" alt="Puppy" />
+          </div>
+        </div>
+      </section>
+
+      <!-- SECTION ABOUT -->
+
+      <section class="about" id="about">
+        <div class="about-container">
+          <div class="about-img">
+            <img src="assets/img/about-pets.jpg" alt="About-pets" />
+          </div>
+          <div class="about-content">
+            <div class="about-content__name">
+              <h3>About the shelter “Cozy House”</h3>
+            </div>
+            <div class="about-content__text">
+              <p>
+                Currently we have 121 dogs and 342 cats on our hands and
+                statistics show that only 20% of them will find a family. The
+                others will continue to live with us and will be waiting for a
+                lucky chance to become dearly loved.
+              </p>
+              <p>
+                We feed our wards with the best food and make sure that they do
+                not get sick, feel comfortable (including psychologically) and
+                well. We are supported by 87 volunteers and 28 employees of
+                various skill levels. About 12% of the animals are taken by the
+                shelter staff. Taking care of the animals, they become attached
+                to the pets and would hardly ever leave them alone.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- SECTION OUR-FRIENDS -->
+
+      <section class="pets">
+        <div class="pets-container">
+          <div class="pets-container__name">
+            <h3>Our friends who</h3>
+            <h3>are looking for a house</h3>
+          </div>
+          <div class="pets-container__images">
+            <img
+              class="back"
+              src="assets/icons/123/button_arrow (1).svg"
+              alt="back"
+            />
+
+            <div class="katrine">
+              <img src="assets/img/pets-katrine.jpg" alt="Katrine" />
+              <p>Katrine</p>
+              <button>Learn more</button>
+            </div>
+            <div class="jennifer">
+              <img src="assets/img/pets-jennifer.jpg" alt="Jennifer" />
+              <p>Jennifer</p>
+              <button>Learn more</button>
+            </div>
+            <div class="woody">
+              <img src="assets/img/pets-woody.jpg" alt="Woody" />
+              <p>Woody</p>
+              <button>Learn more</button>
+            </div>
+
+            <img
+              class="forward"
+              src="assets/icons/button_arrow.svg"
+              alt="forward"
+            />
+          </div>
+          <div class="pets-container__btn"><button>Get to know the rest</button></div>
+        </div>
+      </section>
+
+      <!-- SECTION HELP -->
+
+      <section class="help" id="help">
+        <div class="help-container">
+          <div class="help-title"><h3>How you can help our shelter</h3></div>
+          <div class="help-list">
+            <div class="help-item">
+              <img src="assets/icons/Vector (1).svg" alt="food" />
+              <h4>Pet food</h4>
+            </div>
+            <div class="help-item">
+              <img src="assets/icons/transportation.svg" alt="transportation" />
+              <h4>Transportation</h4>
+            </div>
+            <div class="help-item">
+              <img src="assets/icons/toys.svg" alt="toys" />
+              <h4>Toys</h4>
+            </div>
+            <div class="help-item">
+              <img src="assets/icons/bowls-and-cups.svg" alt="cups" />
+              <h4>Bowls and cups</h4>
+            </div>
+            <div class="help-item">
+              <img src="assets/icons/shampoos.svg" alt="shampoos" />
+              <h4>Shampoos</h4>
+            </div>
+
+            <div class="help-item">
+              <img src="assets/icons/vitamins.svg" alt="vitamins" />
+              <h4>Vitamins</h4>
+            </div>
+            <div class="help-item">
+              <img src="assets/icons/medicines.svg" alt="medicines" />
+              <h4>Medicines</h4>
+            </div>
+            <div class="help-item">
+              <img src="assets/icons/collars-or-leashes.svg" alt="collars" />
+              <h4>Collars / leashes</h4>
+            </div>
+            <div class="help-item">
+              <img src="assets/icons/sleeping-area.svg" alt="sleep" />
+              <h4>Sleeping areas</h4>
+            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- SECTION DONATION -->
+
+      <section class="donation">
+        <div class="donation-container">
+          <div class="donation-container__image">
+            <img src="assets/img/donation-dog.jpg" alt="donation-dog" />
+          </div>
+          <div class="donation-container__info">
+            <div class="donation-container__name">
+              <h3>You can also make a donation</h3>
+            </div>
+            <h5>Name of the bank / Type of banc account</h5>
+            <div class="donation-container__credit">
+              <img src="assets/icons/credit-card.svg" alt="" />
+              <a href="#"><h4>8380 2880 8028 8791 7435</h4></a>
+            </div>
+            <div class="donation-container__quote">
+              <p>
+                Legal information and lorem ipsum dolor sit amet, consectetur
+                adipiscing elit. Maecenas a ipsum at libero sagittis dignissim
+                sed ac diam. Praesent ultrices maximus tortor et vulputate.
+                Interdum et malesuada fames ac ante ipsum primis in faucibus.
+              </p>
+            </div>
+          </div>
+        </div>
+      </section>
+    </main>
+
+    <!-- FOOTER -->
+
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-container__menu" id="contacts">
+          <div class="footer-container__menu-left">
+            <div class="footer-container__name-left">
+              <h3>For questions and suggestions</h3>
+            </div>
+            <div class="email">
+              <img src="assets/icons/mail.svg" alt="email" />
+              <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
+            </div>
+            <div class="phone">
+              <img src="assets/icons/phone.svg" alt="phone" />
+              <a href="tel:+13 674 567 75 54"><h4>+13 674 567 75 54</h4></a>
+            </div>
+          </div>
+          <div class="footer-container__menu-right">
+            <div class="footer-container__name-right">
+              <h3>We are waiting for your visit</h3>
+            </div>
+            <div class="adress-first">
+              <img src="assets/icons/pin.svg" alt="pin" />
+              <a
+                href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%9C%D0%B0%D1%81%D1%81%D0%B0%D1%87%D1%83%D1%81%D0%B5%D1%82%D1%81,+%D0%A1%D0%A8%D0%90/@42.3140089,-71.2504676,10z/data=!3m1!4b1!4m5!3m4!1s0x89e3652d0d3d311b:0x787cbf240162e8a0!8m2!3d42.3600825!4d-71.0588801"
+                ><h4>
+                  1 Central Street, Boston <br />(entrance from the store)
+                </h4></a
+              >
+            </div>
+            <div class="adress-second">
+              <img src="assets/icons/pin (1).svg" alt="pin" />
+              <a
+                href="https://www.google.com/maps/place/%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/data=!4m2!3m1!1s0x47d8a00baf21de75:0x52963a5addd52a99?sa=X&ved=2ahUKEwjLyMXFl9T2AhWOmIsKHZa8BUAQ8gF6BAgREAE"
+                ><h4>18 SouthPark, London</h4></a
+              >
+            </div>
+          </div>
+          <img
+            class="footer-image"
+            src="assets/img/footer-puppy.png"
+            alt="puppy"
+          />
+        </div>
+      </div>
+    </footer>
+  </body>
 </html>
