--- a/index2.html
+++ b/index2.html
@@ -1,143 +1,151 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <link rel="stylesheet" href="style2.css" />
-    <title>Shelter</title>
-  </head>
-  <body>
-    <!-- HEADER -->
-    <header class="header-two">
-      <div class="header-wrapper-two">
-        <div class="header-logo-two">
-          <h1>Cozy House</h1>
-          <p>Shelter for pets in Boston</p>
+
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <link rel="stylesheet" href="style2.css" />
+  <title>Shelter</title>
+  <script src="index.js" type="module"></script>
+  <link rel="shortcut icon" type="image/png" href="123.png">
+</head>
+
+<body>
+  <!-- HEADER -->
+  <header class="header">
+    <div class="header-container">
+      <div class="header-container__logo">
+        <h1>Cozy House</h1>
+        <p>Shelter for pets in Boston</p>
+      </div>
+      <div class="header-container__menu">
+        <nav>
+          <ul>
+            <li><a href="index.html">About the shelter</a></li>
+            <li class="active"><a href="#pets-two">Our pets</a></li>
+            <li><a href="index.html#help">Help the shelter</a></li>
+            <li><a href="#contacts-two">Contacts</a></li>
+          </ul>
+        </nav>
+      </div>
+    </div>
+  </header>
+
+  <main>
+    <!-- pets -->
+    <section class="pets">
+      <div class="pets-container">
+        <div class="pets-container__name">
+          <h3>Our friends who</h3>
+          <h3>are looking for a house</h3>
         </div>
-        <div class="header-menu-two">
-          <nav>
-            <ul>
-              <li><a href="index.html">About the shelter</a></li>
-              <li class="line-two"><a href="#pets-two">Our pets</a></li>
-              <li><a href="index.html#help">Help the shelter</a></li>
-              <li><a href="#contacts-two">Contacts</a></li>
-            </ul>
-          </nav>
+        <div class="pets-container__img">
+          <div class="pets-container__img2">
+            <img src="assets2/img/pets-katrine.jpg" alt="Katrine" />
+            <p>Katrine</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+          <div class="friends-name-img-two">
+            <img src="assets2/img/pets-jennifer.jpg" alt="Jennifer" />
+            <p>Jennifer</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+          <div class="friends-name-img-two">
+            <img src="assets2/img/pets-woody.jpg" alt="Woody" />
+            <p>Woody</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+          <div class="friends-name-img-two">
+            <img src="assets2/img/pets-sophia.jpg" alt="Sophia" />
+            <p>Sophia</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+          <div class="friends-name-img-two">
+            <img src="assets2/img/pets-timmy.jpg" alt="Timmy" />
+            <p>Timmy</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+          <div class="friends-name-img-two">
+            <img src="assets2/img/pets-charly.jpg" alt="Charly" />
+            <p>Charly</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+          <div class="friends-name-img-two">
+            <img src="assets2/img/pets-scarlet.jpg" alt="Scarlett" />
+            <p>Scarlett</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+          <div class="friends-name-img-two">
+            <img src="assets2/img/pets-freddy.jpg" alt="Freddie" />
+            <p>Freddie</p>
+            <button class="bubble-button" data-message="modal">Learn more</button>
+          </div>
+        </div>
+
+        <div class="pets-container__button">
+          <button disabled><img src="assets2/icons/button_back.png" alt="" /></button>
+          <button disabled><img src="assets2/icons/button_back1.png" alt="" /></button>
+          <button class="bubble-button" data-message="modal">
+            <img src="assets2/icons/button_paginator_active.png" alt="" />
+          </button>
+          <button class="bubble-button" data-message="modal"><img src="assets2/icons/button_next1.png"
+              alt="" /></button>
+          <button class="bubble-button" data-message="modal"><img src="assets2/icons/button_next.png" alt="" /></button>
         </div>
       </div>
-    </header>
+    </section>
+  </main>
 
-    <main>
-      <!-- SECTION OUR-FRIENDS-TWO -->
-      <section class="our-friends-two">
-        <div class="friends-wrapper-two">
-          <div class="friends-name-two">
-            <h3>Our friends who</h3>
-            <h3>are looking for a house</h3>
-          </div>
-          <div class="friend-images-two">
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-katrine.jpg" alt="Katrine" />
-              <p>Katrine</p>
-              <button>Learn more</button>
-            </div>
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-jennifer.jpg" alt="Jennifer" />
-              <p>Jennifer</p>
-              <button>Learn more</button>
-            </div>
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-woody.jpg" alt="Woody" />
-              <p>Woody</p>
-              <button>Learn more</button>
-            </div>
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-sophia.jpg" alt="Sophia" />
-              <p>Sophia</p>
-              <button>Learn more</button>
-            </div>
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-timmy.jpg" alt="Timmy" />
-              <p>Timmy</p>
-              <button>Learn more</button>
-            </div>
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-charly.jpg" alt="Charly" />
-              <p>Charly</p>
-              <button>Learn more</button>
-            </div>
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-scarlet.jpg" alt="Scarlett" />
-              <p>Scarlett</p>
-              <button>Learn more</button>
-            </div>
-            <div class="friends-name-img-two">
-              <img src="assets2/img/pets-freddy.jpg" alt="Freddie" />
-              <p>Freddie</p>
-              <button>Learn more</button>
-            </div>
-          </div>
-
-          <div class="friends-button-next">
-            <button disabled><img src="assets2/icons/button_back.png" alt="" /></button>
-            <button disabled><img src="assets2/icons/button_back1.png" alt="" /></button>
-            <button>
-              <img src="assets2/icons/button_paginator_active.png" alt="" />
-            </button>
-            <button><img src="assets2/icons/button_next1.png" alt="" /></button>
-            <button><img src="assets2/icons/button_next.png" alt="" /></button>
-          </div>
-        </div>
-      </section>
-    </main>
-
-    <!-- FOOTER-TWO -->
-
-    <footer class="footer-two">
-      <div class="footer-wrapper-two">
-        <div class="footer-menu-two" id="contacts-two">
-          <div class="footer-menu-left-two">
-            <div class="footer-name-left-two">
+  <!-- FOOTER -->
+  <div class="wrapper">
+    <footer class="footer">
+      <div class="footer-container">
+        <div class="footer-container__menu" id="contacts-two">
+          <div class="footer-container__left">
+            <div class="footer-container__name-left">
               <h3>For questions and suggestions</h3>
             </div>
             <div class="email">
               <img src="assets/icons/mail.svg" alt="email" />
-              <a href="mailto:email@shelter.com"><h4>email@shelter.com</h4></a>
+              <a href="mailto:email@shelter.com">
+                <h4>email@shelter.com</h4>
+              </a>
             </div>
             <div class="phone">
               <img src="assets/icons/phone.svg" alt="phone" />
-              <a href="tel:+13 674 567 75 54"><h4>+13 674 567 75 54</h4></a>
+              <a href="tel:+13 674 567 75 54">
+                <h4>+13 674 567 75 54</h4>
+              </a>
             </div>
           </div>
-          <div class="footer-menu-right-two">
-            <div class="footer-name-right-two">
+          <div class="footer-container__right">
+            <div class="footer-container__name-right">
               <h3>We are waiting for your visit</h3>
             </div>
             <div class="adress-one">
               <img src="assets/icons/pin.svg" alt="pin" />
               <a
-                href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%9C%D0%B0%D1%81%D1%81%D0%B0%D1%87%D1%83%D1%81%D0%B5%D1%82%D1%81,+%D0%A1%D0%A8%D0%90/@42.3140089,-71.2504676,10z/data=!3m1!4b1!4m5!3m4!1s0x89e3652d0d3d311b:0x787cbf240162e8a0!8m2!3d42.3600825!4d-71.0588801"
-                ><h4>
+                href="https://www.google.com/maps/place/%D0%91%D0%BE%D1%81%D1%82%D0%BE%D0%BD,+%D0%9C%D0%B0%D1%81%D1%81%D0%B0%D1%87%D1%83%D1%81%D0%B5%D1%82%D1%81,+%D0%A1%D0%A8%D0%90/@42.3140089,-71.2504676,10z/data=!3m1!4b1!4m5!3m4!1s0x89e3652d0d3d311b:0x787cbf240162e8a0!8m2!3d42.3600825!4d-71.0588801">
+                <h4>
                   1 Central Street, Boston <br />(entrance from the store)
-                </h4></a>
-              
+                </h4>
+              </a>
+
             </div>
             <div class="adress-two">
               <img src="assets/icons/pin (1).svg" alt="pin" />
               <a
-                href="https://www.google.com/maps/place/%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/data=!4m2!3m1!1s0x47d8a00baf21de75:0x52963a5addd52a99?sa=X&ved=2ahUKEwjLyMXFl9T2AhWOmIsKHZa8BUAQ8gF6BAgREAE"
-                ><h4>18 SouthPark, London</h4></a
-              >
+                href="https://www.google.com/maps/place/%D0%9B%D0%BE%D0%BD%D0%B4%D0%BE%D0%BD,+%D0%92%D0%B5%D0%BB%D0%B8%D0%BA%D0%BE%D0%B1%D1%80%D0%B8%D1%82%D0%B0%D0%BD%D0%B8%D1%8F/data=!4m2!3m1!1s0x47d8a00baf21de75:0x52963a5addd52a99?sa=X&ved=2ahUKEwjLyMXFl9T2AhWOmIsKHZa8BUAQ8gF6BAgREAE">
+                <h4>18 SouthPark, London</h4>
+              </a>
             </div>
           </div>
-          <img
-            class="footer-puppy-image-two"
-            src="assets/img/footer-puppy.png"
-            alt="puppy"
-          />
+          <img class="footer-container__puppyimg" src="assets/img/footer-puppy.png" alt="puppy" />
         </div>
       </div>
     </footer>
-  </body>
+  </div>
+</body>
+
 </html>
