--- a/index.html
+++ b/index.html
@@ -50,10 +50,12 @@
                 anybody else in the world, you will see!
               </p>
             </div>
-            <button class="bubble-button" data-message="modal">Make a friend</button>
+            <form action="#pets">
+            <button class="bubble-button"  data-message="modal">Make a friend</button></form>
           </div>
+         
           <div class="hero-pic">
-            <img src="assets/img/start-screen-puppy.png" alt="Puppy" />
+            <a href="https://github.com/Pablov1999" target="blank"> <img src="assets/img/start-screen-puppy.png" alt="Puppy" /></a>
           </div>
         </div>
       </section>
@@ -91,7 +93,7 @@
 
   <!----============================================================== SECTION PETS =========================================================================-->
 
-  <section class="pets">
+  <section class="pets" id="pets">
     <div class="pets-container">
       <div class="pets-container__name">
         <h3>Our friends who</h3>
@@ -118,7 +120,9 @@
 
         <img class="forward" src="assets/icons/button_arrow.svg" alt="forward" />
       </div>
-      <div class="pets-container__btn"><button class="bubble-button">Get to know the rest</button></div>
+      <div class="pets-container__btn">
+        <form action="index2.html">
+        <button class="bubble-button">Get to know the rest</button></form></div>
     </div>
   </section>
 
