--- a/index2.html
+++ b/index2.html
@@ -146,6 +146,25 @@
       </div>
     </footer>
   </div>
+
+  <div id="modal" class="modal hidden">
+    <div class="overlay">
+      <div class="message hidden">
+        <div class="icon-close">✖</div>
+        <p class="message-text">
+          <span>Hello, dear friend!</span><br>
+          <span>This page is under construction. Thank you for being patient!</span>
+        </p>
+        <p class="message-sign">
+          <span>Best regards, Pablo Verenich</span> 🤍<br>
+          <span>Technical support:</span>
+          <a class="message-link" href="https://github.com/Pablov1999" target="_black">@Pablov1999</a> 💻
+        </p>
+      </div>
+    </div>
+  </div>
+
+
   <div class="btn-up">
     
   </div>
